[gd_scene load_steps=8 format=3 uid="uid://qruv4vjqf4tq"]

[ext_resource type="Script" uid="uid://b7yh1bxld0cub" path="res://scripts/annoying_add.gd" id="1_e7myw"]

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_v7lre"]
file = "videos/pub1.ogv"

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_hpciq"]
file = "videos/pub2.ogv"

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_8ban8"]
file = "videos/pub3.ogv"

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_w5nbj"]
file = "videos/pub4.ogv"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hpciq"]
bg_color = Color(0.74, 0.703, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_hpciq"]
variation_embolden = 1.2

[node name="AnnonyingAdd" type="Control"]
layout_mode = 3
anchor_right = 1.8
anchor_bottom = 0.570423
offset_right = -512.0
offset_bottom = 488.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e7myw")
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="VideoContainer" type="AspectRatioContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 0.000488281
grow_horizontal = 2
grow_vertical = 2
ratio = 0.56
stretch_mode = 3

[node name="Pub1" type="VideoStreamPlayer" parent="CanvasLayer/VideoContainer"]
layout_mode = 2
stream = SubResource("VideoStreamTheora_v7lre")
expand = true
loop = true

[node name="Pub2" type="VideoStreamPlayer" parent="CanvasLayer/VideoContainer"]
layout_mode = 2
stream = SubResource("VideoStreamTheora_hpciq")
expand = true
loop = true

[node name="Pub3" type="VideoStreamPlayer" parent="CanvasLayer/VideoContainer"]
layout_mode = 2
stream = SubResource("VideoStreamTheora_8ban8")
expand = true
loop = true

[node name="Pub4" type="VideoStreamPlayer" parent="CanvasLayer/VideoContainer"]
layout_mode = 2
stream = SubResource("VideoStreamTheora_w5nbj")
expand = true
loop = true

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -12.9995
offset_bottom = 0.000488281
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_hpciq")
value = 25.0
show_percentage = false

[node name="Label" type="Label" parent="CanvasLayer/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.5
offset_top = -11.5
offset_right = 66.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "Loading your awesome ad"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AdAnnoucement" type="Panel" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -207.0
offset_bottom = 50.0
grow_horizontal = 0

[node name="Label" type="Label" parent="CanvasLayer/AdAnnoucement"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -11.5
offset_right = 84.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Your ad will start in ..."

[node name="Timer" type="Timer" parent="CanvasLayer"]

[node name="SkipButton" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -166.0
offset_top = -85.9995
offset_right = -29.0
offset_bottom = -43.9995
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = SubResource("FontVariation_hpciq")
disabled = true
text = "Skip >
"

[connection signal="finished" from="CanvasLayer/VideoContainer/Pub1" to="." method="_on_pub_finished"]
[connection signal="finished" from="CanvasLayer/VideoContainer/Pub2" to="." method="_on_pub_finished"]
[connection signal="finished" from="CanvasLayer/VideoContainer/Pub3" to="." method="_on_pub_finished"]
[connection signal="finished" from="CanvasLayer/VideoContainer/Pub4" to="." method="_on_pub_finished"]
[connection signal="timeout" from="CanvasLayer/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/SkipButton" to="." method="_on_skip_button_pressed"]
